(OWC-692) Updated styles to fix tooltip alignment

--- a/ui/components/slider/base/_index.scss
+++ b/ui/components/slider/base/_index.scss
@@ -205,6 +205,10 @@
  */
 .nds-slider-label__label {
   display: inline-block;
+
+  &.nds-form-element__legend {
+    margin-right: 0.5rem;
+  }
 }
 
 /**
